<version new> fixed

--- a/app/src/main/res/values-be-rBY/strings.xml
+++ b/app/src/main/res/values-be-rBY/strings.xml
@@ -326,4 +326,13 @@
     <string name="cancel_task">Cancel Task</string>
     <string name="task_name_error">Please specify task name</string>
     <string name="added_task">Successfully Added Task</string>
+    <string name="about_us_describe">Наш дадатак створаны для таго, каб вы маглі заўжды кантраляваць свой настрой, у цяжкіх сітуацыях маглі папрактыкавацца з дыханнем і памедытаваць, каб вам стала лягчэй. А таксама вы можаце захоўваць тут лекі, прыёмы ў лекара і неабходныя аналізы,а таксама спіс справаў.
+Калі вы маеце падазрэнне,што нешта ідзе не так, можаце скарыстацца простым тэстам (але памятайце,што ў такія моманты варта звярнуцца да лекара).
+
+        Чаму мы называемся "Vožyk"?
+
+        Бо стваральніцы гэтага дадатку з Беларусі, і нам важна перадаць вам таксама і кроплю нашай прыгожай мовы.
+
+     Дзякуем, што выбралі наш дадатак!</string>
+
 </resources>
